# Gloss

./: MANIFEST.in  README.md  pyproject.toml
Gloss/: normalizelipstic.py  pathwaysmodule.py  prepdata.py  regressbootstrap.py  regresscv.py  regressor.py
Gloss/data/: kegg_pathways_sep18_2024.pkl
GlossPath/: PathwaysModule.py  PrepData.py  RegressBootstrap.py  RegressCV.py  Regressor.py  __init__.py  pathways.py  pathwaysmodule.py  prepdata.py  regressbootstrap.py  regresscv.py  regressor.py
